# weaver

./: .ghci  .ghcid  README.md
automata/: CHANGELOG.md  automata.cabal
automata/src/Data/Automata/: Classes.hs  DFA.hs  Graph.hs  NFA.hs  Regex.hs
automata/test/Data/Automata/: DFASpec.hs  GraphSpec.hs  NFASpec.hs  RegexSpec.hs  Util.hs
examples/: array-eq-symm.wvr  array-eq-trans.wvr  clever.wvr  fibonacci.wvr  loop-tiling-eq.wvr  max.wvr  mult-comm.wvr  mult-dist.wvr  mult-flipped-dist.wvr  security.wvr  spaghetti.wvr  unroll-2.wvr  unroll-3.wvr  unroll-4.wvr  unroll-5.wvr  unroll-cond-2.wvr  unroll-cond-3.wvr  unroll-cond-4.wvr  unroll-cond-5.wvr
examples/bench/: exp1x3-proof.wvr  exp1x3.wvr  exp2x3-proof.wvr  exp2x3.wvr  exp2x4-proof.wvr  exp2x4.wvr  exp2x6-proof.wvr  exp2x6.wvr  exp2x9-proof.wvr  exp2x9.wvr  exp3x3-opt.wvr  exp3x3-proof.wvr  exp3x3.wvr
examples/chl/: array-int-subst.wvr  array-int-symm.wvr  array-int-trans.wvr  chromosome-opt-symm.wvr  chromosome-subst.wvr  chromosome-symm.wvr  chromosome-trans.wvr  collitem-subst.wvr  collitem-symm.wvr  collitem-trans.wvr  container-subst.wvr  container-symm.wvr  container-trans.wvr  exp-term-subst.wvr  exp-term-trans.wvr  file-item-subst.wvr  file-item-symm.wvr  file-item-trans.wvr  match-subst.wvr  match-symm.wvr  match-trans.wvr  name-comparator-subst.wvr  name-comparator-symm.wvr  name-comparator-trans.wvr  node-subst.wvr  node-symm.wvr  node-trans.wvr  nzb-file-subst.wvr  nzb-file-symm.wvr  nzb-file-trans.wvr  poker-hand-subst.wvr  poker-hand-symm.wvr  poker-hand-trans.wvr  simpl-str-subst.wvr  simpl-str-symm.wvr  simpl-str-trans.wvr  sre-subst.wvr  sre-symm.wvr  sre-trans.wvr  time-subst.wvr  (+5 more)
examples/parallel/: bakery-2.wvr  bakery-3.wvr  bakery-4.wvr  barrier-loop.wvr  barrier.wvr  bluetooth.wvr  lamport.wvr  min-max-1.wvr  min-max-2.wvr  misc-1.wvr  misc-2-unrolled-atomic.wvr  misc-2-unrolled.wvr  misc-2.wvr  misc-3-extended.wvr  misc-3.wvr  misc-4.wvr  misc-5.wvr  parallel-sum-1-dsl.wvr  parallel-sum-1.wvr  parallel-sum-2.wvr  parallel-sum-equiv.wvr  producer-consumer-equiv.wvr  simple-equiv.wvr  ticket-2.wvr  ticket-3.wvr  ticket-4.wvr  ticket-5.wvr  ticket-6.wvr  ticket-7.wvr  ticket-8.wvr
examples/popl20/: array-sum.wvr  channel-sum.wvr  commit-1.wvr  commit-2.wvr  counter-add-4-semi.wvr  counter-determinism.wvr  counter-fun.wvr  counter-mul-4-semi.wvr  difference-det.wvr  figure1-alt.wvr  figure1.wvr  figure3.wvr  horseshoe.wvr  min-max-dec.wvr  min-max-inc-dec.wvr  min-max-inc.wvr  min-max.wvr  mult-equiv.wvr  nonblocking-cntr-alt.wvr  nonblocking-cntr.wvr  prod-cons-eq.wvr  prod-cons.wvr  prod-consumer3.wvr  queue-add-2.wvr  queue-add-3.wvr  ring-s.wvr  ring-t.wvr  ring.wvr  send-receive-alt.wvr  send-receive.wvr  simple-array-sum.wvr  simple-queue.wvr  threaded-sum-3.wvr  three-array-max.wvr  three-array-min.wvr  three-array-sum.wvr  two-queue.wvr
examples/popl20-bad/: commit-2.wvr  counter-queue.wvr  dot-product-alt.wvr  dot-product.wvr  ring-nondet.wvr  threaded-sum-2.wvr  three-array-sum-alt.wvr
examples/popl20-more/: array-sum-alt.wvr  array-sum.wvr  buffer-mult-alt.wvr  buffer-mult.wvr  buffer-series-array.wvr  buffer-series.wvr  dec-subseq-array.wvr  dec-subseq.wvr  dot-product-array.wvr  dot-product.wvr  inc-subseq-array.wvr  inc-subseq.wvr  max-array-alt.wvr  max-array-hom.wvr  max-array.wvr  max-fun-alt.wvr  max-fun.wvr  min-array-alt.wvr  min-array-hom.wvr  min-fun-alt.wvr  min-fun.wvr  min-le-max.wvr  mts-array.wvr  mts.wvr  multiply-verify.wvr  nonblocking-counter-alt2.wvr  parray-copy.wvr  queue-add-2-nl.wvr  queue-add-3-nl.wvr  sorted.wvr  sum-array.wvr  sum-fun-alt.wvr  sum-fun.wvr  two-buyer.trauma  vector-add.wvr
examples/popl20-proofs/: channel-sum-7qD.wvr  channel-sum-y17.wvr  channel-sum.wvr  commit-1-alt.wvr  commit-2-alt-4ap.wvr  commit-2-alt-6PX.wvr  commit-2-alt-IXq.wvr  commit-2-alt-KW5.wvr  commit-2-alt-dnh.wvr  commit-2-alt.wvr  counter-add-2-context-A2k.wvr  counter-add-2-context-alt-CGj.wvr  counter-add-2-context-alt-Ohq.wvr  counter-add-2-context-alt-Rdp.wvr  counter-add-2-context-alt-yQo.wvr  counter-add-2-context-alt.wvr  counter-add-2-context-qQ7.wvr  counter-add-2-context.wvr  counter-add-2-semi-4Yz.wvr  counter-add-2-semi-alt-Nr0.wvr  counter-add-2-semi-alt-OJ4.wvr  counter-add-2-semi-alt-c4l.wvr  counter-add-2-semi-alt-l52.wvr  counter-add-2-semi-alt-qyV.wvr  counter-add-2-semi-alt.wvr  counter-add-2-semi-qN0.wvr  counter-add-2-semi.wvr  counter-add-4-semi-Q67.wvr  counter-add-4-semi-uCc.wvr  counter-add-4-semi.wvr  counter-fun-mnX.wvr  counter-fun.wvr  counter-mul-2-semi-7Dh.wvr  counter-mul-2-semi.wvr  counter-mul-4-semi-NZZ.wvr  counter-mul-4-semi.wvr  difference-det-6aW.wvr  difference-det-QTX.wvr  difference-det-hK6.wvr  difference-det.wvr  (+50 more)
examples/test/: array1.wvr  atomic1.wvr  context1.wvr  easy1.wvr  easy10.wvr  easy11.wvr  easy2.wvr  easy3.wvr  easy4.wvr  easy5.wvr  easy6.wvr  easy7.wvr  easy8.wvr  easy9.wvr  (+2 more)
finite/: CHANGELOG.md  LICENSE  finite.cabal
finite/src/Data/Finite/: Class.hs  Container.hs  Instances.hs  Set.hs  Small.hs
finite/src/Data/Finite/Set/: AntiMap.hs  Antichain.hs
finite/src/Data/Finite/Small/: Internal.hs  Map.hs  Set.hs
finite/test/Data/Finite/: ClassSpec.hs  ContainerSpec.hs  SetSpec.hs  Util.hs
finite/test/Data/Finite/Set/: AntiMapSpec.hs  AntichainSpec.hs
ismt/: CHANGELOG.md  ismt.cabal
ismt/src/Language/SMT/: Backend.hs  Expr.hs  SExpr.hs  Solver.hs  Var.hs
ismt/src/Language/SMT/Backend/: CVC4.hs  Hybrid.hs  MathSAT.hs  SMTInterpol.hs  Yices.hs  Z3.hs
ismt/src/Language/SMT/Expr/: Internal.hs
weaver/: CHANGELOG.md  weaver.cabal
weaver/src/: Main.hs
weaver/src/Weaver/: Algorithm.hs  Bound.hs  Config.hs  Counterexample.hs  Options.hs  Program.hs  Stmt.hs
weaver/src/Weaver/Algorithm/: LexNF.hs  LexNFContext.hs  Normal.hs  NormalTrace.hs  Partition.hs  PartitionOpt.hs  PartitionProgress.hs  PartitionProgressContext.hs  PartitionProgressSets.hs  PartitionProgressTrace.hs  PartitionSets.hs  TotalOpt.hs  TotalOrderOpt.hs  TotalProgressContext.hs  TotalProgressContextOpt.hs  TotalProgressOpt.hs
