cabal-version:       2.4
name:                ismt
version:             0.1.0.0
synopsis:            An API for invoking SMT solvers that support interpolation
-- description:
homepage:            https://github.com/YellPika/ismt
bug-reports:         https://github.com/YellPika/ismt/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
copyright:           © 2018 Anthony Vandikas
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.SMT.Backend,
                       Language.SMT.Backend.CVC4,
                       Language.SMT.Backend.Hybrid,
                       Language.SMT.Backend.MathSAT,
                       Language.SMT.Backend.SMTInterpol,
                       Language.SMT.Backend.Yices,
                       Language.SMT.Backend.Z3,
                       Language.SMT.Expr,
                       Language.SMT.SExpr,
                       Language.SMT.Solver,
                       Language.SMT.Var
  other-modules:       Language.SMT.Expr.Internal
  build-depends:       attoparsec    ^>=0.13.2.3,
                       base          ^>=4.13.0.0,
                       bimap         ^>=0.4.0,
                       dependent-sum ^>=0.6.2.0,
                       containers    ^>=0.6.2.1,
                       process       ^>=1.6.5.1,
                       scientific    ^>=0.3.6.2,
                       text          ^>=1.2.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
