cabal-version:       2.4
name:                weaver
version:             0.1.0.0
synopsis:            Reduction-based software model checker
-- description:
homepage:            https://github.com/weaver-verifier/weaver
bug-reports:         https://github.com/weaver-verifier/weaver/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              YellPika
maintainer:          yellpika@gmail.com
copyright:           © 2018-2019 Anthony Vandikas
category:            Language

executable weaver
  main-is:             Main.hs
  other-modules:       Weaver.Algorithm,
                       Weaver.Algorithm.LexNF,
                       Weaver.Algorithm.LexNFContext,
                       Weaver.Algorithm.Normal,
                       Weaver.Algorithm.NormalTrace,
                       Weaver.Algorithm.Partition,
                       Weaver.Algorithm.PartitionProgress,
                       Weaver.Algorithm.PartitionProgressContext,
                       Weaver.Algorithm.PartitionProgressTrace,
                       Weaver.Algorithm.TotalOpt,
                       Weaver.Algorithm.TotalProgressOpt,
                       Weaver.Algorithm.TotalProgressContext,
                       Weaver.Algorithm.TotalProgressContextOpt,
                       Weaver.Bound,
                       Weaver.Config,
                       Weaver.Counterexample,
                       Weaver.Options,
                       Weaver.Program,
                       Weaver.Stmt
  build-depends:       automata             ^>=0.1.0.0,
                       base                 ^>=4.13.0.0,
                       clock                ^>=0.8,
                       constraints          ^>=0.11.2,
                       constraints-extras   ^>=0.3.0.2,
                       containers           ^>=0.6.2.1,
                       dependent-map        ^>=0.3,
                       dependent-sum        ^>=0.6.2.0,
                       finite               ^>=0.1.0.0,
                       ismt                 ^>=0.1.0.0,
                       keys                 ^>=3.12.2,
                       mtl                  ^>=2.2.2,
                       optparse-applicative ^>=0.15.1.0,
                       semialign            ^>=1,
                       text                 ^>=1.2.4.0,
                       these                ^>=1.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
